# sshmux

./: .gitignore  Cargo.toml  INTEGRATION_NOTES.md  README.md  index.html  manifest.json  style.css
.cargo/: config.toml
.github/workflows/: deploy.yml  release.yml
cli/: Cargo.toml
cli/src/: hostkey.rs  lib.rs  main.rs  relay.rs  trust.rs  tunnel.rs
cli/tests/: relay_gate.rs  trust_validation.rs
docs/: BRIDGE.md  DEPLOY.md
link/: Cargo.toml
link/src/: lib.rs
src/: app.rs  main.rs
src/claude/: mod.rs  parse.rs
src/ssh/: mod.rs  session.rs  transport.rs
src/tmux/: mod.rs  parse.rs
src/ui/: chat.rs  connect.rs  detail.rs  mod.rs  panes.rs  terminal.rs
