[package]
name = "sshmux"
version = "0.1.4"
edition = "2021"

# The root package is the wasm web app (built by Trunk). The native CLI and the
# shared deep-link schema are additional workspace members; `cargo build -p
# sshmux-cli` compiles only the CLI's dep tree (no leptos/russh/avt/wasm deps).
[workspace]
members = ["cli", "link"]

[dependencies]
russh = { version = "0.62.2", default-features = false, features = ["flate2", "ring"] }
tokio = { version = "1", default-features = false, features = ["sync", "macros", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1"
futures = "0.3"
leptos = { version = "0.8", features = ["csr"] }
avt = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sshmux-link = { path = "link" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ws_stream_wasm = "0.7"
async_io_stream = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# getrandom 0.2 is pulled by ring; needs "js" feature on wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["js"] }
# getrandom 0.4 is pulled by rand 0.10 / RustCrypto stack; needs "wasm_js" feature
# plus --cfg getrandom_backend="wasm_js" rustflags (see .cargo/config.toml)
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
# ring gates its wasm SystemRandom support behind this feature
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-storage = "0.3"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Document", "EventTarget", "History", "Location", "VisibilityState", "Window"] }

[profile.release]
opt-level = "s"
lto = true
