[package]
name = "sshmux-link"
version = "0.1.3"
edition = "2021"

# Shared deep-link schema, compiled into BOTH the wasm web app and the native
# CLI so encode (CLI) and decode (web) can never drift. Target-agnostic: no
# tokio, no wasm-bindgen, no ring.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
